# cadquery-skylark

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
notebooks/: 1-details.py  2-walls.py  4-exports.py  wall.py  wip.py
src/cadquery_skylark/: common.py  details.py  wall_a.py  wall_b.py  wall_c.py  wall_d.py
src/cadquery_skylark/wall/: wall_a.py  wall_b.py  wall_c.py  wall_d.py
